Integrate bootstrap CSS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<div class="logo"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-6 logo">One</div>
+        <div class="col-sm-6">Two</div>
+    </div>
+</div>
