Simplify binding syntax.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <my-panel [icon]="'fa fa-credit-card'" [title]="'Header'">
+    <my-panel iconClass="fa fa-credit-card" title="Header">
         So I can stick anything in here.
     </my-panel>
 </div>
