--- a/src/app/my-ui/my-panel/my-panel.component.html
+++ b/src/app/my-ui/my-panel/my-panel.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-header"><span *ngIf="icon" class="{{icon}}"></span> {{title}}</div>
+    <div class="card-header"><span *ngIf="iconClass" class="{{iconClass}}"></span> {{title}}</div>
     <div class="card-block">
         <div class="card-text">
             <ng-content></ng-content>
