Experiment creating icon class.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <my-panel iconClass="fa fa-credit-card" title="Header">
+    <core-panel iconClass="icon icon-crm" title="Header">
         So I can stick anything in here.
-    </my-panel>
+    </core-panel>
 </div>
