Implement collapsible panel.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="container-fluid">
-    <core-panel iconClass="icon icon-crm" title="Header">
+    <core-panel iconClass="icon icon-crm" title="Panel Header">
         So I can stick anything in here.
     </core-panel>
+    <core-collapsible-panel title="Collapsible Panel Header">
+        This content is collapsible.
+    </core-collapsible-panel>
 </div>
