--- a/src/app/core-ui/core-panel/core-panel.component.html
+++ b/src/app/core-ui/core-panel/core-panel.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-    <div class="card-header"><span *ngIf="iconClass" class="{{iconClass}}"></span> {{title}}</div>
+<div class="card core-panel">
+    <div class="card-header"><span *ngIf="iconClass" class="title-icon {{iconClass}}"></span>{{title}}</div>
     <div class="card-block">
         <div class="card-text">
             <ng-content></ng-content>
