--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,5 @@
 .icon.icon-crm {
     background: url('./dynamics.png') center/100% no-repeat;
-    padding: 0 15px 0 0;
-    margin: 0 5px 0 0;
+    padding: 10px;
     white-space: nowrap;
 }
