--- a/src/app/core-ui/core-collapsible-panel/core-collapsible-panel.component.html
+++ b/src/app/core-ui/core-collapsible-panel/core-collapsible-panel.component.html
@@ -1,6 +1,6 @@
-<ngb-accordion class="main-accordion" (panelChange)="onPanelChange($event)">
+<ngb-accordion class="core-collapsible-panel" (panelChange)="onPanelChange($event)">
     <ngb-panel id="main-panel">
-        <template ngbPanelTitle><span class="fa" [ngClass]="{'fa-chevron-circle-right': !isOpen, 'fa-chevron-circle-down': isOpen}"></span> {{title}}</template>
+        <template ngbPanelTitle><span class="title-icon fa" [ngClass]="{'fa-chevron-circle-right': !isOpen, 'fa-chevron-circle-down': isOpen}"></span>{{title}}</template>
         <template ngbPanelContent>
             <ng-content></ng-content>
         </template>
