--- a/src/app/core-ui/core-collapsible-panel/core-collapsible-panel.component.scss
+++ b/src/app/core-ui/core-collapsible-panel/core-collapsible-panel.component.scss
@@ -1,3 +1,7 @@
 .core-collapsible-panel .title-icon {
-    margin-right: 10px;
+    margin-right: 5px;
+}
+
+.core-collapsible-panel .card-header.card-inverse a {
+    color: #fff;
 }
