--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,36 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-xs-12">
-            <core-panel iconClass="icon icon-crm" title="Panel Header">
+            <core-panel iconClass="icon icon-crm" title="Panel Header" [status]="_panelStatus">
                 So I can stick anything in here.
             </core-panel>
         </div>
     </div>
     <div class="row">
         <div class="col-xs-12">
-            <core-collapsible-panel title="Collapsible Panel Header" [(is-open)]="_isPanelOpen">
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-secondary" (click)="setPanelNormal()">Normal</button>
+                <button type="button" class="btn btn-success" (click)="setPanelSuccess()">Success</button>
+                <button type="button" class="btn btn-danger" (click)="setPanelError()">Error</button>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <core-collapsible-panel title="Collapsible Panel Header"
+                                    [is-open]="_isPanelOpen"
+                                    [status]="_collapsiblePanelStatus">
                 This content is collapsible.
             </core-collapsible-panel>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-secondary" (click)="setCollapsiblePanelNormal()">Normal</button>
+                <button type="button" class="btn btn-success" (click)="setCollapsiblePanelSuccess()">Success</button>
+                <button type="button" class="btn btn-danger" (click)="setCollapsiblePanelError()">Error</button>
+            </div>
         </div>
     </div>
     <div class="row">
