--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,55 +1,17 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col">
-            <core-panel iconClass="icon icon-crm" title="Panel Header" [status]="_panelStatus">
-                So I can stick anything in here.
-            </core-panel>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
             <div class="btn-group" role="group">
-                <button type="button" class="btn btn-secondary" (click)="setPanelNormal()">Normal</button>
-                <button type="button" class="btn btn-success" (click)="setPanelSuccess()">Success</button>
-                <button type="button" class="btn btn-danger" (click)="setPanelError()">Error</button>
+                <a class="btn btn-primary" [routerLink]="['home']">Home</a>
+                <a class="btn btn-primary" [routerLink]="['panel-demo']">Panel</a>
+                <a class="btn btn-primary" [routerLink]="['collapsible-panel-demo']">Collapsible Panel</a>
+                <a class="btn btn-primary" [routerLink]="['date-picker-demo']">Date Picker</a>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <core-collapsible-panel title="Collapsible Panel Header"
-                                    [isOpen]="_isPanelOpen"
-                                    (isOpenChanged)="updatePanelStatus($event)"
-                                    [status]="_collapsiblePanelStatus">
-                This content is collapsible.
-            </core-collapsible-panel>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div class="btn-group" role="group">
-                <button type="button" class="btn btn-secondary" (click)="setCollapsiblePanelNormal()">Normal</button>
-                <button type="button" class="btn btn-success" (click)="setCollapsiblePanelSuccess()">Success</button>
-                <button type="button" class="btn btn-danger" (click)="setCollapsiblePanelError()">Error</button>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" name="chkCollapsiblePanel" type="checkbox" [(ngModel)]="_isPanelOpen" />
-                    {{collapsibleMessage}}
-                </label>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <core-date-picker name="dtDate"
-                              [(date)]="_date"
-                              [minDate]="_minDate"
-                              [maxDate]="_maxDate"></core-date-picker>
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
