Implement spinner components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
                 <a class="btn btn-primary" [routerLink]="['panel-demo']">Panel</a>
                 <a class="btn btn-primary" [routerLink]="['collapsible-panel-demo']">Collapsible Panel</a>
                 <a class="btn btn-primary" [routerLink]="['date-picker-demo']">Date Picker</a>
+                <a class="btn btn-primary" [routerLink]="['spinner-demo']">Spinner</a>
             </div>
         </div>
     </div>
