Initial routing-tabset implementation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-Click the buttons above to demo the UI controls.
+<core-routing-tabset outletName="tabs">
+    <core-routing-tab title="Panel" [route]="['panel-demo']"></core-routing-tab>
+    <core-routing-tab title="Collapsible Panel" [route]="['collapsible-panel-demo']"></core-routing-tab>
+    <core-routing-tab title="Date Picker" [route]="['date-picker-demo']"></core-routing-tab>
+    <core-routing-tab title="Spinner" [route]="['spinner-demo']"></core-routing-tab>
+</core-routing-tabset>
