--- a/src/app/core-ui/core-routing-tabset/core-routing-tabset.component.html
+++ b/src/app/core-ui/core-routing-tabset/core-routing-tabset.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card core-routing-tabset">
     <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs" role="tablist">
             <li class="nav-item" *ngFor="let tab of tabs">
