--- a/src/app/modal-demo/modal-demo.component.html
+++ b/src/app/modal-demo/modal-demo.component.html
@@ -1,11 +1,19 @@
 <div class="row">
     <div class="col">
-        <button (click)="showConfirmation()">Show Confirmation Modal</button>
+        <button class="btn btn-secondary" (click)="showConfirmation()">Show Confirmation Modal</button>
     </div>
 </div>
 <div class="row">
     <div class="col">Result: {{ confirmResult }}</div>
 </div>
+<div class="row">
+    <div class="col">
+        <button class="btn btn-secondary" (click)="showAlert()">Show Alert Modal</button>
+    </div>
+</div>
 <core-confirmation-modal title="Confirm">
     Click OK to confirm.
 </core-confirmation-modal>
+<core-alert-modal title="Alert">
+    Something happened!
+</core-alert-modal>
